styles.css
.navbar {
    background-color: lightgray;

    
}


#card {
    width:60%;
    margin:auto;
    margin: 20px auto; 
    padding: 20px;

    background-color: #f9f9f9; /* Sets a light background color for contrast */
    border: 1px solid #ddd; /* Adds a subtle border */
    border-radius: 10px; /* Rounds the corners */
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Adds a shadow for depth */
    text-align: center; 
}

.idk {
    width:90%;
    margin:auto;
    margin-right: 20px;

    display:flex;
    flex-direction:column;
    
}

nav > h2 {
    width:20%;
    margin:10px;
}


a {
    color: black;
    text-decoration:none;
}
a:hover {
    font-weight: bold;
}

